--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name='viewport'
       content='width=device-width, initial-scale=1, shrink-to-fit=no'
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <meta name='theme-color' content='#000000' />
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
     <title>Znayti</title>
